Form on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -771,7 +771,7 @@ body {
 
 
 	@media only screen and (max-width: 768px) {
-		.contact-form-container { padding: 30px 20px;}
+		.contact-form-container { padding: 0px;}
 	}
 
 
